crates/cli/tests/snapshots/run_typescript_test__out_dir__doesnt_route_to_cache_if_disabled.snap
---
source: crates/cli/tests/run_typescript_test.rs
expression: "read_to_string(sandbox.path().join(\"out-dir-routing/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "./dts"
  }
}

