crates/cli/tests/snapshots/run_typescript_test__out_dir__routes_to_cache_when_no_compiler_options.snap
---
source: crates/cli/tests/run_typescript_test.rs
expression: "read_to_string(sandbox.path().join(\"out-dir-routing-no-options/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/out-dir-routing-no-options"
  }
}

